--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,12 @@
 
 # Back-End Variables
 DATABASE_URL=postgres://gitpod:postgres@localhost:5432/example
-FLASK_APP_KEY="any key works"
+FLASK_APP_KEY="my_superpass_secret_key"
 FLASK_APP=src/app.py
 FLASK_DEBUG=1
 DEBUG=TRUE
 
 # Front-End Variables
 VITE_BASENAME=/
-#VITE_BACKEND_URL=
+#VITE_BACKEND_URL
+VITE_BACKEND_URL=https://sturdy-fiesta-9w5p5x6p7q27pqr-3001.app.github.dev
